--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <h2>6. Exclusión de la garantía</h2>
     <p>La garantía quedará sin efecto si:</p>
     <ul>
-      <li>El cliente no informa el problema en un plazo máximo de siete (7) días corridos desde que detecta la falla.</li>
+      <li>El cliente no informa el problema en un plazo máximo de seis (6) días corridos desde que detecta la falla.</li>
       <li>El cliente hace uso indebido de la cuenta (como compartirla, alterar datos, o infringir las políticas de Canva).</li>
       <li>Canva realiza cambios internos en su plataforma que escapan al control del vendedor.</li>
       <li>El cliente no sigue las instrucciones dadas para la activación y uso correcto.</li>
