--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <p>El presente documento establece los términos y condiciones de la garantía limitada que el vendedor entrega al cliente, con relación a la adquisición de una suscripción digital a Canva Pro Educación, válida por tres (3) años, junto con un curso gratuito de uso básico e intermedio de la plataforma.</p>
 
     <h2>2. Naturaleza del producto</h2>
-    <p>El producto corresponde a una suscripción digital a Canva Pro Educación con duración de tres años, más el acceso a un curso gratuito en línea, diseñado para que el cliente aproveche al máximo las herramientas de la plataforma.</p>
+    <p>El producto corresponde a una suscripción digital a Canva Pro Educación con duración de tres años, más el acceso a un curso gratuito en formado pdf, diseñado para que el cliente aproveche al máximo las herramientas de la plataforma.</p>
 
     <h2>3. Activación del servicio</h2>
     <p>La activación de la suscripción puede realizarse antes de que se haya efectuado el pago completo, en casos donde el vendedor así lo permita como cortesía o por gestión anticipada.
