--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <p>No se aceptan devoluciones. Al tratarse de un producto digital y de carácter no revocable, el cliente entiende y acepta que no tendrá derecho a reembolso, total ni parcial, por ningún motivo una vez realizada la activación del servicio.</p>
 
     <h2>8. Curso gratuito</h2>
-    <p>Como parte del servicio ofrecido, el cliente recibirá acceso a un curso gratuito que cubre funciones esenciales y herramientas prácticas de Canva. Este curso no tiene costo adicional, no es transferible y su acceso está condicionado a la activación de la suscripción.</p>
+    <p>Como parte del servicio ofrecido, el cliente recibirá acceso a un curso gratuito que recibirá mediante el correo electrónico que uso para la suscripción en un plazo máximo de setenta y dos (72) horas laborales. Dicho curso cubre funciones esenciales y herramientas prácticas de Canva. Este curso no tiene costo adicional, no es transferible y su acceso está condicionado a la activación de la suscripción.</p>
 
     <h2>9. Aceptación de términos</h2>
     <p>El cliente, al momento de completar el pago o utilizar la cuenta, reconoce haber leído y aceptado los términos establecidos en este contrato, así como las limitaciones y condiciones aquí descritas.</p>
