--- a/index.html
+++ b/index.html
@@ -63,6 +63,12 @@
       <li>El cliente no sigue las instrucciones dadas para la activación y uso correcto.</li>
     </ul>
 
+    <h2>7. Horarios</h2>
+    <ul>
+    <p>El horario de ventas será de lunes a domingo de 09:00 a.m. hasta las 23:30 p.m.</p>
+    <p>El horario de garantías ayudas con algún problema de la cuenta, será de lunes a viernes de 09:00 a.m. hasta las 21:00 p.m. Y los días sábados de 09:00 a.m. hasta las 13:00 p.m. </p>
+    </ul>
+    
     <h2>7. Política de devoluciones</h2>
     <p>No se aceptan devoluciones. Al tratarse de un producto digital y de carácter no revocable, el cliente entiende y acepta que no tendrá derecho a reembolso, total ni parcial, por ningún motivo una vez realizada la activación del servicio.</p>
 
