--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
     <h1>CONTRATO DE GARANTÍA LIMITADA</h1>
     <p><strong>Servicio:</strong> Suscripción Canva Pro Educación (duración: 3 años)</p>
     <p><strong>Vendedor:</strong> Tu Canva Pro</p>
+    <p><strong>Fecha:</strong> 15/06/2025</p>
+    <p><strong>Falla:</strong> Parche de actualización; Cambio de proveedor</p>
 
     <h2>1. Objeto del contrato</h2>
     <p>El presente documento establece los términos y condiciones de la garantía limitada que el vendedor entrega al cliente, con relación a la adquisición de una suscripción digital a Canva Pro Educación, válida por tres (3) años, junto con un curso gratuito de uso básico e intermedio de la plataforma.</p>
@@ -64,7 +66,7 @@
     </ul>
 
     <h2>7. Horario de garantía</h2>
-    <p>El horario de garantías ya sea por WhatsApp, Messenger, correo electrónico y la página de instagram, serán para resolver cualquier problema de la cuenta, dicho horario será de lunes a viernes de 09:00 a.m. hasta las 21:00 p.m. Y los días sábados de 09:00 a.m. hasta las 13:00 p.m. Una vez enviada la solicitd para arreglar el problema de la cuenta, él administrador se contactará en un plazo máximo de 48 horas laborales. </p>
+    <p>El horario de atención para solicitudes relacionadas con garantías, ya sea a través de WhatsApp, Messenger, correo electrónico o la página de Instagram, estará disponible de lunes a viernes, desde las 09:00 a.m. hasta las 21:00 p.m., y los días sábados desde las 09:00 a.m. hasta las 13:00 p.m. Una vez enviada la solicitud para resolver algún inconveniente con la cuenta, el administrador se pondrá en contacto en un plazo máximo de 48 horas laborables.</p>
     
     <h2>8. Política de devoluciones</h2>
     <p>No se aceptan devoluciones. Al tratarse de un producto digital y de carácter no revocable, el cliente entiende y acepta que no tendrá derecho a reembolso, total ni parcial, por ningún motivo una vez realizada la activación del servicio.</p>
