--- a/index.html
+++ b/index.html
@@ -72,9 +72,21 @@
     <p>No se aceptan devoluciones. Al tratarse de un producto digital y de carácter no revocable, el cliente entiende y acepta que no tendrá derecho a reembolso, total ni parcial, por ningún motivo una vez realizada la activación del servicio.</p>
 
     <h2>9. Curso gratuito</h2>
-    <p>Como parte del servicio ofrecido, el cliente recibirá acceso a un curso gratuito que recibirá mediante el correo electrónico que uso para la suscripción en un plazo máximo de setenta y dos (72) horas laborales. Dicho curso cubre funciones esenciales y herramientas prácticas de Canva. Este curso no tiene costo adicional, no es transferible y su acceso está condicionado a la activación de la suscripción.</p>
-
-    <h2>10. Aceptación de términos</h2>
+    <p>Como parte del servicio ofrecido, el cliente recibirá acceso a un curso gratuito que recibirá mediante el correo electrónico que uso para la suscripción en un plazo máximo de setenta y dos (72) horas laborales. Dicho curso cubre funciones esenciales y herramientas prácticas de Canva. Este curso no tiene costo adicional, no es transferible y su acceso está condicionado a la activación de la suscripción.</h2>
+    
+    <h2>10. Políticas de exclusión de la cuenta y eliminación del usuario</h2>
+<p>El vendedor se reserva el derecho de excluir, suspender o eliminar de forma permanente la cuenta del cliente sin derecho a reembolso en los siguientes casos:</p>
+<ul>
+  <li><strong>Compartir la cuenta:</strong> Si el cliente comparte su acceso a terceros por correo, enlaces o contraseñas.</li>
+  <li><strong>Invitar a nuevas personas sin autorización:</strong> Agregar miembros al equipo sin aprobación expresa del vendedor.</li>
+  <li><strong>Incumplimiento de las normas de Canva:</strong> Cualquier infracción a los términos de uso, como uso indebido, contenido prohibido o violaciones de propiedad intelectual.</li>
+  <li><strong>Alteración no autorizada de datos:</strong> Modificar correo electrónico, nombre, configuración del equipo o eliminar miembros sin permiso.</li>
+  <li><strong>Suplantación de identidad o fraude:</strong> Uso de información falsa o suplantación de identidad.</li>
+  <li><strong>Reincidencia:</strong> Repetir cualquier conducta indebida mencionada.</li>
+</ul>
+<p>La detección de estas acciones será evaluada por el administrador del servicio, quien podrá proceder con la suspensión o eliminación inmediata del usuario sin previo aviso. Esta acción es irrevocable y no dará lugar a ningún tipo de reembolso.</p>
+    
+    <h2>11.Aceptacionde términos</h2>
     <p>El cliente, al momento de completar el pago o utilizar la cuenta, reconoce haber leído y aceptado los términos establecidos en este contrato, así como las limitaciones y condiciones aquí descritas.</p>
   </div>
 </body>
