--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <p>El presente contrato es emitido posterior a la compra y sirve como respaldo formal del servicio prestado y las condiciones de garantía aceptadas por el cliente al momento de la transacción.</p>
 
     <h2>5. Cobertura de la garantía</h2>
-    <p>La garantía cubre exclusivamente el correcto funcionamiento del servicio durante los tres (3) meses siguientes a la activación. En caso de fallas técnicas relacionadas directamente con la suscripción, el cliente podrá solicitar soporte y resolución dentro de este período, siempre y cuando lo notifique dentro de los primeros seis (6) días corridos desde que se presenta el inconveniente.</p>
+    <p>La garantía cubre exclusivamente el correcto funcionamiento del servicio durante los tres (3) años siguientes a la activación. En caso de fallas técnicas relacionadas directamente con la suscripción, el cliente podrá solicitar soporte y resolución dentro de este período, siempre y cuando lo notifique dentro de los primeros seis (6) días corridos desde que se presenta el inconveniente.</p>
 
     <h2>6. Exclusión de la garantía</h2>
     <p>La garantía quedará sin efecto si:</p>
