--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <p>El horario de atención para solicitudes relacionadas con garantías, ya sea a través de WhatsApp, Messenger, correo electrónico o la página de Instagram, estará disponible de lunes a viernes, desde las 09:00 a.m. hasta las 21:00 p.m., y los días sábados desde las 09:00 a.m. hasta las 13:00 p.m. Una vez enviada la solicitud para resolver algún inconveniente con la cuenta, el administrador se pondrá en contacto en un plazo máximo de 48 horas laborables.</p>
     
     <h2>8. Política de devoluciones</h2>
-    <p>No se aceptan devoluciones. Al tratarse de un producto digital y de carácter no revocable, el cliente entiende y acepta que no tendrá derecho a reembolso, total ni parcial, por ningún motivo una vez realizada la activación del servicio.</p>
+    <p>No se aceptan devoluciones. Al tratarse de un producto digital y de carácter no revocable, el cliente entiende y acepta que no tendrá derecho a reembolso, total ni parcial, por ningún motivo una vez realizada la activación del servicio. Sin embargo aquellas cuentas entregadas entregadas con menos de 72 horas después de la falla o que el administrador considere, se le realizará una devolución parcial en un plazo máximo de 14 días laborables.</p>
 
     <h2>9. Curso gratuito</h2>
     <p>Como parte del servicio ofrecido, el cliente recibirá acceso a un curso gratuito que recibirá mediante el correo electrónico que uso para la suscripción en un plazo máximo de setenta y dos (72) horas laborales. Dicho curso cubre funciones esenciales y herramientas prácticas de Canva. Este curso no tiene costo adicional, no es transferible y su acceso está condicionado a la activación de la suscripción.</h2>
