--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
   <li><strong>Suplantación de identidad o fraude:</strong> Uso de información falsa o suplantación de identidad.</li>
   <li><strong>Reincidencia:</strong> Repetir cualquier conducta indebida mencionada.</li>
 </ul>
-<p>La detección de estas acciones será evaluada por el administrador del servicio, quien podrá proceder con la suspensión o eliminación inmediata del usuario sin previo aviso. Esta acción es irrevocable y no dará lugar a ningún tipo de reembolso.</p>
+<p>La detección de estas acciones será evaluada por el administrador del servicio, quien podrá proceder con la suspensión o eliminación inmediata del usuario sin previo aviso. Esta acción es irrevocable y no dará lugar a ningún tipo de reembolso. Canva también puede hacerlo sin previo aviso, y se prodecerá a la eliminación del servicio, volviendosé de forma gratuita.</p>
     
     <h2>11.Aceptacionde términos</h2>
     <p>El cliente, al momento de completar el pago o utilizar la cuenta, reconoce haber leído y aceptado los términos establecidos en este contrato, así como las limitaciones y condiciones aquí descritas.</p>
