--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
     <p>El presente contrato es emitido posterior a la compra y sirve como respaldo formal del servicio prestado y las condiciones de garantía aceptadas por el cliente al momento de la transacción.</p>
 
     <h2>5. Cobertura de la garantía</h2>
-    <p>La garantía cubre exclusivamente el correcto funcionamiento del servicio durante los tres (3) años siguientes a la activación. En caso de fallas técnicas relacionadas directamente con la suscripción, el cliente podrá solicitar soporte y resolución dentro de este período, siempre y cuando lo notifique dentro de los primeros seis (6) días corridos desde que se presenta el inconveniente.</p>
+    <p>La garantía cubre exclusivamente los primeros treinta (30) días del servicio. En caso de presentarse una falla técnica, el cliente deberá notificarla dentro de los tres (3) días corridos posteriores a la detección del inconveniente.
+Una vez recibido el reclamo, se enviará un correo a Canva para gestionar la incidencia, y la respuesta estará disponible dentro de un plazo de entre cuarenta y ocho (48) y setenta y dos (72) horas laborales.</p>
 
     <h2>6. Exclusión de la garantía</h2>
     <p>La garantía quedará sin efecto si:</p>
