--- a/index.html
+++ b/index.html
@@ -54,13 +54,13 @@
     <p>El presente contrato es emitido posterior a la compra y sirve como respaldo formal del servicio prestado y las condiciones de garantía aceptadas por el cliente al momento de la transacción.</p>
 
     <h2>5. Cobertura de la garantía</h2>
-    <p>La garantía cubre exclusivamente los primeros treinta (30) días del servicio. En caso de presentarse una falla técnica, el cliente deberá notificarla dentro de los tres (3) días corridos posteriores a la detección del inconveniente.
-Una vez recibido el reclamo, se enviará un correo a Canva para gestionar la incidencia, y la respuesta estará disponible dentro de un plazo de entre cuarenta y ocho (48) y setenta y dos (72) horas laborales.</p>
+    <p>La garantía cubre exclusivamente los primeros treinta (30) días del servicio. En caso de presentarse una falla técnica, el cliente deberá notificarla dentro de las veinticuatro (24) horas corridas posteriores a la detección del inconveniente.
+Una vez recibido el reclamo, se enviará un correo al soporte Canva para gestionar la incidencia, y la respuesta estará disponible dentro de un plazo de entre cuarenta y ocho (48) y setenta y dos (72) horas laborales.</p>
 
     <h2>6. Exclusión de la garantía</h2>
     <p>La garantía quedará sin efecto si:</p>
     <ul>
-      <li>El cliente no informa el problema en un plazo máximo de seis (6) días corridos desde que detecta la falla.</li>
+      <li>El cliente no informa el problema en un plazo máximo de cuarenta y ocho (48) horas corridas desde que el administrador detecta la falla.</li>
       <li>El cliente hace uso indebido de la cuenta (como compartirla, alterar datos, o infringir las políticas de Canva).</li>
       <li>Canva realiza cambios internos en su plataforma que escapan al control del vendedor.</li>
       <li>El cliente no sigue las instrucciones dadas para la activación y uso correcto.</li>
